k8s/10-auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: kube-credential-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: 885706662470.dkr.ecr.us-east-1.amazonaws.com/auth-service:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: auth-data
              mountPath: /app/data
      volumes:
        - name: auth-data
          persistentVolumeClaim:
            claimName: shared-data-pvc-new
