k8s/3-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: kube-credential-ns
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
