k8s/9-api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: kube-credential-ns
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 3000
      targetPort: 3000
