k8s/issuance-service.yaml
# k8s/issuance-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issuance-service
  namespace: kube-credential-ns
spec:
  type: ClusterIP
  selector:
    app: issuance-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
