k8s/verification-service.yaml
# k8s/verification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verification-service
  namespace: kube-credential-ns
spec:
  selector:
    app: verification-service
  type: LoadBalancer # <-- ADD THIS LINE
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
