k8s/9-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: credential-app-ingress
  namespace: kube-credential-ns
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.44.220.16.109.nip.io
      secretName: credential-app-tls
  rules:
    - host: app.44.220.16.109.nip.io
      http:
        paths:
          - path: /verify
            pathType: Prefix
            backend:
              service:
                name: verification-service
                port:
                  number: 8082
          - path: /issue
            pathType: Prefix
            backend:
              service:
                name: issuance-service
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
