k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: credential-app-ingress
  namespace: kube-credential-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: alb
  rules:
    - host: app.44.211.222.64.sslip.io # <-- use your node public IP here
      http:
        paths:
          # ACME challenge path
          - path: /.well-known/acme-challenge/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          # Verification service
          - path: /verify
            pathType: Prefix
            backend:
              service:
                name: verification-service
                port:
                  number: 8082
          # Issuance service
          - path: /issue
            pathType: Prefix
            backend:
              service:
                name: issuance-service
                port:
                  number: 8081
          # Default frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - app.44.211.222.64.sslip.io # <-- same public IP here
      secretName: credential-app-tls
